# mlir-tutorial

./: CMakeLists.txt  README.md
ex1-io/: ex1-io.cpp
ex2-build/: ex2-build.cpp
ex3-dialect/include/toy/: ToyOps.td
ex3-dialect/tools/toy-opt/: CMakeLists.txt  toy-opt.cpp
ex4-beautiful-dialect/include/toy/: ToyOps.td
ex4-beautiful-dialect/tools/toy-opt/: CMakeLists.txt  toy-opt.cpp
ex5-pass/include/toy/: ToyOps.td
ex5-pass/tools/toy-opt/: CMakeLists.txt  toy-opt.cpp
ex6-pattern/include/toy/: ToyOps.td
ex6-pattern/tools/toy-opt/: CMakeLists.txt
ex7-convert/include/toy/: ToyOps.td
ex7-convert/tools/toy-opt/: CMakeLists.txt  toy-opt.cpp
fig/: op.drawio
